--- a/temple-inn-and-suite/css/small.css
+++ b/temple-inn-and-suite/css/small.css
@@ -21,7 +21,7 @@ main {
   margin: auto;
 }
 
-article {
+article, .weather-one {
   display: block;
   border-radius: 10px;
   padding: 0em;
@@ -178,15 +178,111 @@ footer {
   grid-column: 1/3;
 }
 
+/* Weather */
+
+
 /* Reservation */
+
+.reservation-main {
+  font-family: "Montserrat", sans-serif;
+}
 
 em {
   font-size: smaller;
 }
-.grid {
+
+form fieldset {
+  margin: 10px;
+  border: 2px #e5e5e5 solid;
+  border-radius: 8px;
+
+  padding-inline-end: 2rem;
+}
+
+form legend {
+  color: #2f5597;
+  font-weight: bolder;
+  padding: 0.7rem;
+  background-color: white;
+  border-radius: 8px;
+  font-size: larger;
+}
+
+form label.top,
+form div {
+  display: block;
+  padding-top: 1rem;
+  padding-right: 1rem;
+}
+
+form label.top input,
+form label.top select {
+  display: block;
+  border: 2px #e5e5e5 solid;
+  border-radius: 80px;
+  padding: 0.75rem;
+  width: 100%;
+  background-color: #F2F2F2;
+}
+
+form label.sbs {
+  display: block;
+  padding: 0.75rem 0;
+  color: #2f5597;
+}
+
+form textarea {
+  width: 108%;
+  background-color: #F2F2F2;
+  border-radius: 8px;
+}
+
+form input.submit {
   display: grid;
-  grid-gap: 0.5rem;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  border: none;
+  background-color: #F2F2F2;
+font-weight: bolder;
+  border-radius: 8px;
+  padding: 0.75rem 1.5rem;
+  margin: 0 0 2rem 2%;
+  width: 50%;
+  justify-self: center;
+}
+
+form input.submit:hover {
+  font-weight: bolder;
+  color: white;
+  background-color: #8ad023;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+form label.top input:required {
+  border: 2px #e5e5e5 solid;
+}
+
+.level {
+  font-weight: bold;
+}
+
+.price {
+  background-color: #2f5597;
+  color: white;
+  padding: 0.25rem 1rem;
+  margin-left: 0.5rem;
+  border-radius: 10px;
+}
+
+.selection {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	align-items: center;
+}
+.thankyou {
+  margin: 1em;
+  max-width: 30em;
+  justify-self: center;
+  padding: 2em;
 }
 
 /* Temples */
@@ -196,19 +292,19 @@ em {
   width: 60%;
   margin: auto;
 }
-
 .card-view {
   display: grid;
   grid-template-columns: 1fr;
 }
-
 .card-view section {
   padding: 1em;
   margin: 0.5em;
   border-radius: 8px;
   background-color: #F2F2F2;
 }
-
+.temple-heading {
+text-align: center;
+}
 
 /* like button 
 :root {
