--- a/temple-inn-and-suite/css/large.css
+++ b/temple-inn-and-suite/css/large.css
@@ -58,11 +58,17 @@ grid-column: 1/5;
     grid-template-columns: repeat(3, 1fr);
   }
   form textarea {
-    width: 102%;
+    width: 100%;
   }
-  .join-form {
-    grid-column: 2/3;
-    grid-row: 1/3;
-    margin-left: 1em;
+  .spotlights {
+    align-items: center;
+    text-align: center;
+    grid-column: 1/5;
+  }
+  .spotlight img {
+    width: 22em;
+  }
+  .wedding {
+    display: block;
   }
 }
