--- a/temple-inn-and-suite/css/small.css
+++ b/temple-inn-and-suite/css/small.css
@@ -21,7 +21,8 @@ main {
   margin: auto;
 }
 
-article, .weather-one {
+article,
+.weather-one {
   display: block;
   border-radius: 10px;
   padding: 0em;
@@ -34,7 +35,7 @@ h1 {
   text-shadow: 1.5px 2px 0px #8bd02367;
 }
 h2 {
-  color: #2F5597;
+  color: #2f5597;
 }
 
 /* Header */
@@ -102,14 +103,16 @@ strong:hover {
 
 footer {
   grid-template-columns: repeat(2, 1fr);
-  background-color: #2F5597;
+  background-color: #2f5597;
   color: white;
   text-align: center;
   padding-bottom: 0.5rem;
   width: 100%;
   margin-top: 1em;
+  font-size: .75em;
 }
-.map, .openweather {
+.map,
+.openweather {
   list-style: none;
   color: white;
 }
@@ -140,23 +143,19 @@ footer {
   border-radius: 8px;
   padding: 10px;
 }
-
 .spotlight:last-child {
   display: none;
 }
-
 .spotlight img {
   width: 100%;
   padding-top: 10px;
 }
-
 .spotlight {
   background-color: white;
   border-radius: 8px;
   margin-bottom: 0.5rem;
   font-size: larger;
 }
-
 .calltoactionimage {
   border-radius: 8px 8px 0 0;
   width: 100%;
@@ -192,11 +191,20 @@ footer {
   font-size: 1em;
   grid-column: 1/3;
 }
-.family, .wedding {
-display: none;
+.family {
+  display: none;
 }
 
 /* Weather */
+
+.weather-one h3 {
+  font-weight: bold;
+  margin: 2px auto;
+}
+.weather-one {
+  padding: 1em;
+  font-family: "Montserrat", sans-serif;
+}
 
 
 /* Reservation */
@@ -214,12 +222,11 @@ form fieldset {
   margin: 10px;
   border: 2px #e5e5e5 solid;
   border-radius: 8px;
-
   padding-inline-end: 2rem;
 }
 
 form legend {
-  color: #2F5597;
+  color: #2f5597;
   font-weight: bolder;
   padding: 0.7rem;
   background-color: white;
@@ -241,18 +248,18 @@ form label.top select {
   border-radius: 80px;
   padding: 0.75rem;
   width: 100%;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
 }
 
 form label.sbs {
   display: block;
   padding: 0.75rem 0;
-  color: #2F5597;
+  color: #2f5597;
 }
 
 form textarea {
   width: 100%;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   border-radius: 8px;
   padding: 8px;
 }
@@ -260,8 +267,8 @@ form textarea {
 form input.submit {
   display: grid;
   border: none;
-  background-color: #F2F2F2;
-font-weight: bolder;
+  background-color: #f2f2f2;
+  font-weight: bolder;
   border-radius: 8px;
   padding: 0.75rem 1.5rem;
   margin: 0 0 2rem 2%;
@@ -285,16 +292,16 @@ form label.top input:required {
 }
 
 .price {
-  background-color: #2F5597;
+  background-color: #2f5597;
   color: white;
   padding: 0.25rem 1rem;
   margin-left: 0.5rem;
   border-radius: 10px;
 }
 .selection {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
 }
 .thankyou {
   margin: 1em;
@@ -315,7 +322,7 @@ form label.top input:required {
   color: #8ad023;
   font-size: 1.5em;
 }
-input[type=radio] {
+input[type="radio"] {
   border: 0px;
   width: 35%;
   height: 1.25em;
@@ -337,10 +344,10 @@ input[type=radio] {
   padding: 1em;
   margin: 0.5em;
   border-radius: 8px;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
 }
 .temple-heading {
-text-align: center;
+  text-align: center;
 }
 
 /* Service */
@@ -408,9 +415,8 @@ article p {
 }
 
 .amenities {
-  padding-top: .5em;
+  padding-top: 0.5em;
 }
-
 
 /* sub pages */
 
